Archive2/25/d65404c6c6fd19/output
main.cpp: In function 'int main()':
main.cpp:11:49: error: invalid use of incomplete type 'struct CheckWithMessage<false, 50>'
     static_assert(CheckWithMessage<false, 10*5>{}, "!");
                                                 ^
main.cpp:4:8: error: declaration of 'struct CheckWithMessage<false, 50>'
 struct CheckWithMessage : std::true_type {};
        ^
